<resources>
    <string name="app_name">Grid POS Client</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_new_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="login_success">Login success</string>
    <string name="password">Password</string>
    <string name="set_a_password">Set a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welkom">Welkom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_unknown">Unknown error</string>
    <string name="confirm_exit">Close application ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="google_plus_login">Google+ login</string>
    <string name="facebook_login">Facebook login</string>
    <string name="logout">登出</string>
    <string name="confirm_logout">登出應用程式？</string>
    <string name="overview">概覽</string>
    <string name="products">貨品</string>
    <string name="analysis">分析</string>
    <string name="my_grids">格仔</string>
    <string name="data_analysis">數據分析</string>
    <string name="num_products">件貨品</string>
    <string name="all_products">貨品清單</string>
    <string name="product_list">貨品清單</string>
    <string name="general_info">一般資料</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sales_record">銷售紀錄</string>
    <string name="price">售價</string>
    <string name="qty">數量</string>
    <string name="desc">描述</string>
    <string name="no_desc">未有描述</string>
    <string name="no_product">未有貨品</string>
    <string name="belong_to_grid">所屬格仔</string>
    <string name="piece">件</string>
    <string name="id">編號</string>
    <string name="sold">售出</string>
    <string name="total_price">總金額</string>
    <string name="sales_total_qty">總銷售量</string>
    <string name="sales_total_price">總銷售額</string>
    <string name="product_store">存貨</string>
    <string name="invoices">發票</string>
    <string name="no_record">未有紀錄</string>
    <string name="date">日期</string>
    <string name="HKD">HKD</string>
    <string name="time">時間</string>
    <string name="product_name">貨品名稱</string>
    <string name="unit_price">單價</string>
    <string name="total">總數</string>
</resources>
