<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:stretchColumns="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:id="@+id/date_title"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/date"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/time"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total_price"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/total_amount"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </TableRow>

    </TableLayout>

    <!--<TableLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/header"-->
        <!--android:layout_below="@+id/tableLayout">-->

        <!--<TableRow>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/tableLayout"
        android:text="@string/product_name"
        android:id="@+id/header_col_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/unit_price"
        android:id="@+id/header_col_2"
        android:layout_alignTop="@+id/header_col_1"
        android:layout_toLeftOf="@+id/header_col_3"
        android:textAlignment="viewEnd"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/qty"
        android:id="@+id/header_col_3"
        android:textAlignment="viewEnd"
        android:layout_alignTop="@+id/header_col_2"
        android:layout_toLeftOf="@+id/header_col_4"
        android:layout_toStartOf="@+id/header_col_4"/>

    <TextView
        android:layout_width="90dp"
        android:textAlignment="viewEnd"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total"
        android:id="@+id/header_col_4"
        android:layout_alignTop="@+id/header_col_3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
        <!--</TableRow>-->

    <!--</TableLayout>-->

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/header_col_1"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>