<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:stretchColumns="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/price"
                android:id="@+id/price_title"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/price"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qty"
                android:id="@+id/qty_title"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/qty"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/belong_to_grid"
                android:id="@+id/belong_to_grid_title"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/belong_to_grid"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/desc"
                android:id="@+id/desc_title"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/upper"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="A COOL PHONE DESIGNED FOR YOU WITH LOVE AND QUALITY" />

        </TableRow>

    </TableLayout>
</RelativeLayout>